--- a/style.css
+++ b/style.css
@@ -1,31 +1,102 @@
 body {
-    margin: 0;
+  margin: 0;
+  background-color: #f5f3ff;
+  font-family: Roboto;
 }
 
 .container {
-    display: grid;
-    height: 100vh;
-    grid-template-columns: 3fr 1fr;
-    grid-template-rows: .5fr 3fr;
+  display: grid;
+  height: 100vh;
+  grid-template-columns: 3fr 1fr;
+  grid-template-rows: 0.5fr 3fr;
 }
 
 .sidebar {
-    background-color: #5b21b6;
-    grid-column: 2/ 3;
-    grid-row: 1 / 4;
+  background-color: #5b21b6;
+  grid-column: 2/ 3;
+  grid-row: 1 / 4;
 }
 
 .form-container {
-    display: grid;
+  display: grid;
+  place-items: center;
+}
+
+.form-container h1 {
+  color: white;
+}
+
+.form-container label {
+  color: white;
+  font-weight: 500;
+  letter-spacing: 1px;
+  margin-bottom: 5px;
+}
+
+.form-container input {
+  height: 18px;
+  padding-left: 10px;
+  margin-bottom: 16px;
+  border-radius: 12px;
+  border: none;
+}
+
+.checkbox-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 18px;
+  gap: 10px;
+}
+
+.form-container div label,
+.form-container div input {
+  margin: 0;
+}
+
+.header {
+  display: grid;
+  place-items: center;
+  grid-template-columns: 1fr;
+  margin-bottom: 12px;
+}
+
+.search-bar-container {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
+
+.search-bar {
+  background-color: #ede9fe;
+  flex: 1;
+  height: 24px;
+  width: 400px;
+  padding-left: 10px;
+  border-radius: 12px;
+}
+
+.search-bar-button {
+  background-color: #7c3aed;
+  border-radius: 12px;
+  padding: 1px 4px;
+}
+
+.search-bar-icon {
+  width: 28px;
+  fill: white;
+  border: 0px solid black;
 }
 
 .library-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 10px;
+  margin: 0 10px;
 }
 
 .book-card {
-    background-color: #ddd6fe;
-    border-radius: 18px;
+  background-color: #ddd6fe;
+  border-radius: 18px;
 }
