--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   background-color: #f5f3ff;
-  font-family: Roboto;
+  font-family: "Roboto", sans-serif;
 }
 
 p,
@@ -18,21 +18,21 @@ h3 {
 
 .sidebar {
   background-color: #5b21b6;
-  grid-column: 2/ 3;
+  grid-column: 2 / 3;
   grid-row: 1 / 4;
 }
 
 .form-container {
   display: grid;
   place-items: center;
+  color: white;
 }
 
 .form-container h1 {
-  color: white;
+  color: inherit;
 }
 
 .form-container label {
-  color: white;
   font-weight: 500;
   letter-spacing: 1px;
   margin-bottom: 5px;
@@ -73,11 +73,10 @@ h3 {
 .header {
   display: grid;
   place-items: center;
-  grid-template-columns: 1fr;
   margin-bottom: 12px;
 }
 
-.header > h1 {
+.header h1 {
   color: #2e1065;
 }
 
@@ -106,7 +105,6 @@ h3 {
 .search-bar-icon {
   width: 28px;
   fill: white;
-  border: 0px solid black;
 }
 
 .library-container {
@@ -114,7 +112,7 @@ h3 {
   grid-template-columns: repeat(auto-fit, minmax(550px, 1fr));
   grid-auto-rows: 200px;
   gap: 10px;
-  padding: 10px 10px;
+  padding: 10px;
   max-height: 100vh;
   overflow: auto;
 }
@@ -126,9 +124,9 @@ h3 {
 }
 
 .book-card {
-  box-sizing: border-box;
   display: flex;
   height: 100%;
+  margin: 0;
 }
 
 .book-card-edge {
@@ -141,7 +139,6 @@ h3 {
   cursor: pointer;
   display: grid;
   place-items: center;
-  box-sizing: border-box;
   width: 36px;
   height: 36px;
   border-radius: 50%;
@@ -156,10 +153,8 @@ h3 {
   flex: 1;
   display: grid;
   align-items: center;
-  grid-template-columns: 1fr;
   grid-template-rows: repeat(5, 1fr);
   margin: 6px 0;
-  margin-right: 6px;
   padding: 0 18px;
   border: 4px solid #2e10652d;
   border-radius: 18px;
