--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ h3 {
   display: grid;
   align-items: center;
   grid-template-rows: repeat(5, 1fr);
-  margin: 6px 0;
+  margin: 6px 6px 6px 0;
   padding: 0 18px;
   border: 4px solid #2e10652d;
   border-radius: 18px;
